# parafashion

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  INSTALL.md  Parafashion.pro  README.md  libs.pri
apps/: parafashion.cpp  parafashion_app.cpp  parafashion_commandline.cpp  parafashion_frame_convert.cpp  param.cpp  textile_param.cpp
configs/: final_config.json
data/dress/: dress.ply  input.ply
data/leggins/: leggins.ply  leggins_UV.txt  leggins_patch.txt
data/mark_skirt/: Skirt from traditional block 1.dxf  Skirt from traditional block 1.plt
data/wet/: wet_UV.txt  wet_patch.obj.mtl  wet_patch.txt
data/wet_cedric/: symmetrized.ply  wet_input.ply  wet_output.ply  wet_output_UV.txt  wet_output_patch.obj.mtl  wet_output_patch.txt
include/: animation_manager.h  field_computation.h  glwidget.h  moc_predefs.h  myglwidget.h  parafashion.h  parafashion_interface.h  parametrizer.h  smooth_field_directional.h  svg_exporter.h  symmetrizer.h  trace_path_GL.h  trace_path_ui.h
include/param/: auto_select.h  bary_optimizer.h  cloth_param.h  dart.h  metrics.h  multi_patch_param.h  multiple_poses_param.h  param_utils.h  self_intersect.h
include/textile_param/: fibre_elongation.h  ourglwidget.h  triangle_mesh_type.h
lib/tracing/include/tracing/: patch_tracer.h
src/: animation_manager.cpp  field_computation.cpp  glwidget.cpp  moc_glwidget.cpp  myglwidget.cpp  parafashion.cpp
src/param/: auto_select.cpp  bary_optimizer.cpp  cloth_param.cpp  metrics.cpp  multi_patch_param.cpp  param_utils.cpp
src/textile_param/: ourglwidget.cpp  ourmoc_glwidget.cpp
